fix: after second review sprint-15